modified:   index.html 	modified:   login.css 	modified:   login.html 	modified:   style.css

--- a/login.html
+++ b/login.html
@@ -1,41 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="outerFrame">
-        <div class="schoolLogo" id="schoolLogo">
-            <div class="logoAlignement">
-                <section class="logo" id="logo"></section>   
-            </div>
-            <div class="textAlignment">
-                <h1>Partido <span>State University</span><span class="textstyle">Goa, Camarines, Sur</span></h1>
-                
-            </div>
+      <div class="schoolLogo" id="schoolLogo">
+        <div class="logoAlignement">
+          <section class="logo" id="logo"></section>
         </div>
-        <div class="innerFrame" id="innerFrame">
-            <header>
-                <h1>Student</h1>
-            </header>
-            <section>
-                <h3>User ID</h3>
-                <input type="text" placeholder="User ID">
-            </section>
-            <section>  
-                <h3>Password</h3> 
-                <input type="password" placeholder="Password">
-            </section>
-            <section>
-                <button id="logINButton" class="logINButton">LOGIN</button>
-            </section>
-            <section>
-                <a href="index.html">Signup</a>
-            </section>
+        <div class="textAlignment">
+          <h1>
+            Partido <span>State University</span
+            ><span class="textstyle">Goa, Camarines, Sur</span>
+          </h1>
         </div>
+      </div>
+      <div class="innerFrame" id="innerFrame">
+        <header>
+          <h1>Student</h1>
+        </header>
+        <section>
+          <h3>User ID</h3>
+          <input type="text" placeholder="User ID" />
+        </section>
+        <section>
+          <h3>Password</h3>
+          <input type="password" placeholder="Password" />
+        </section>
+        <section>
+          <button id="logINButton" class="logINButton">LOGIN</button>
+        </section>
+        <section>
+          <a href="index.html">Signup</a>
+        </section>
+      </div>
     </div>
-</body>
-<link rel="stylesheet" href="login.css">
+  </body>
+  <link rel="stylesheet" href="login.css" />
 </html>
